# dataset_toolbox

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bugs.md  data_editor.py  data_saver.py  docker-compose.yml  legacy_view_app.py  main.py  nginx.conf  pyproject.toml  run.py  tools.py
.devcontainer/: Dockerfile  devcontainer.json
ls_and_ml_backend/: .gitignore  README.md  docker-compose.yml  label_interface_template.xml  setup.sh
src/: layout.py  ml_backends.py
src/components/: data_editor.py  data_saver.py  lightbox.py  list_dir.py  local_dir_picker.py  local_picker.py
src/pages/: converter.py  editor.py  home.py  label_studio.py  rle_converter.py  viewer.py
toolbox/: data_conversion.py  data_converter.py  data_editor.py  ome_converter.py  rle_converter.py  utilities.py
toolbox/archive/: data_editor.py  data_saver.py  data_splitter.py  legacy_viewer.py  mask_utils.py
toolbox/ome_tif/: legacy_viewer.py
